trying conditional stuff again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,20 +83,30 @@ jobs:
       - run:
           name: Bump Version and commit
           command: |
-            if [ -z "$(git tag --points-at HEAD)" ]; then
-              git config --global user.email "ci@ribbiot.com"
-              git config --global user.name "CircleCI"
-              yarn config set version-git-message "Upgrade to version %s"
-              git config --global push.followTags true
-              yarn version --patch
-              git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --follow-tags
-              export CURRENT_VERSION=$(jq -r '.version' package.json)
-              echo $CURRENT_VERSION
-              exit 0
-            else
-              echo "Tagged commit found. Skipping job."
-              exit 0
-            fi
+            git config --global user.email "ci@ribbiot.com"
+            git config --global user.name "CircleCI"
+            yarn config set version-git-message "Upgrade to version %s"
+            git config --global push.followTags true
+            yarn version --patch
+            git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --follow-tags
+            export CURRENT_VERSION=$(jq -r '.version' package.json)
+            echo $CURRENT_VERSION
+
+      # if [ -z "$(git tag --points-at HEAD)" ]; then
+      #   git config --global user.email "ci@ribbiot.com"
+      #   git config --global user.name "CircleCI"
+      #   yarn config set version-git-message "Upgrade to version %s"
+      #   git config --global push.followTags true
+      #   yarn version --patch
+      #   git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --follow-tags
+      #   export CURRENT_VERSION=$(jq -r '.version' package.json)
+      #   echo $CURRENT_VERSION
+      #   exit 0
+      # else
+      #   echo "Tagged commit found. Skipping job."
+      #   exit 0
+      # fi
+
       # git push origin main
       # CURRENT_VERSION=$(jq -r '.version' package.json)
       # IFS='.' read -r -a VERSION_PARTS \<<< "0.0.1"
@@ -264,6 +274,18 @@ jobs:
             fi
 workflows:
   bump-version-on-main:
+    when:
+      and:
+        - equal: [main, << pipeline.git.branch >>]
+        - not: << pipeline.git.tag >>
+    jobs:
+      - bump-version:
+          context: Web
+          filters:
+            branches:
+              only:
+                - main
+
     # when:
     #   and:
     #     - equal: [main, << pipeline.git.branch >>]
@@ -274,13 +296,6 @@ workflows:
     #   - not:
     #       matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
     #   - equal: [main, << pipeline.git.branch >>]
-    jobs:
-      - bump-version:
-          context: Web
-          filters:
-            branches:
-              only:
-                - main
 
   build_and_deploy:
     when:
