echo out branch and tags

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,14 +83,17 @@ jobs:
       - run:
           name: Bump Version and commit
           command: |
-            git config --global user.email "ci@ribbiot.com"
-            git config --global user.name "CircleCI"
-            yarn config set version-git-message "Upgrade to version %s"
-            git config --global push.followTags true
-            yarn version --patch
-            git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --follow-tags
-            export CURRENT_VERSION=$(jq -r '.version' package.json)
-            echo $CURRENT_VERSION
+            echo << pipeline.git.branch >>
+            echo << pipeline.git.tag >>
+
+      # git config --global user.email "ci@ribbiot.com"
+      # git config --global user.name "CircleCI"
+      # yarn config set version-git-message "Upgrade to version %s"
+      # git config --global push.followTags true
+      # yarn version --patch
+      # git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --follow-tags
+      # export CURRENT_VERSION=$(jq -r '.version' package.json)
+      # echo $CURRENT_VERSION
 
       # if [ -z "$(git tag --points-at HEAD)" ]; then
       #   git config --global user.email "ci@ribbiot.com"
@@ -273,6 +276,10 @@ jobs:
               aws cloudfront create-invalidation --distribution-id ${AWS_CLOUDFRONT_DISTRIBUTION_ID} --path /\*
             fi
 workflows:
+  bump-version-on-main:
+    jobs:
+      - bump-version:
+          context: Web
   # bump-version-on-main:
   #   when:
   #     not:
