put it in quotes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,8 +83,8 @@ jobs:
       - run:
           name: Bump Version and commit
           command: |
-            echo << pipeline.git.branch >>
-            echo << pipeline.git.tag >>
+            echo "<< pipeline.git.branch >>"
+            echo "<< pipeline.git.tag >>"
 
       # git config --global user.email "ci@ribbiot.com"
       # git config --global user.name "CircleCI"
