--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -285,7 +285,7 @@ workflows:
           context: Web
           filters:
             tags:
-              only: /^v.*/
+              only: /^heyyyyyyyyy.*/
   # bump-version-on-main:
   #   when:
   #     not:
