--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,6 +286,8 @@ workflows:
           filters:
             tags:
               only: /^heyyyyyyyyy.*/
+            branches:
+              ignore: /.*/
   # bump-version-on-main:
   #   when:
   #     not:
