--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -290,10 +290,10 @@ workflows:
       - bump-version:
           context: Web
           filters:
-            tags:
-              ignore: /.*/
             branches:
               only: main
+            tags:
+              ignore: /.*/
   # bump-version-on-main:
   #   when:
   #     not:
@@ -320,135 +320,135 @@ workflows:
   #       matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
   #   - equal: [main, << pipeline.git.branch >>]
 
-  build_and_deploy:
-    # when:
-    #   and:
-    #     - equal: [main, << pipeline.git.branch >>]
-    #     - matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
-    jobs:
-      - setup:
-          context: Web
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
-      - linting:
-          context: Web
-          requires:
-            - setup
-      # - bump-version:
-      #     context: Web
-      # requires:
-      #   - linting
-      # - build:
-      #     context: Web
-      #     requires:
-      #       - bump-version
-      # - terraform-validate:
-      #     context: Web
-      #     name: terraform-validate-dev
-      #     requires:
-      #       - build
-      #     env: dev
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - terraform-plan-and-apply:
-      #     context: Web
-      #     name: terraform-plan-and-apply-dev
-      #     requires:
-      #       - terraform-validate-dev
-      #     env: dev
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - deploy-to-aws-s3-dev:
-      #     context: Web
-      #     requires:
-      #       - terraform-plan-and-apply-dev
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - deploy-to-aws-cloudfront-dev:
-      #     context: Web
-      #     requires:
-      #       - deploy-to-aws-s3-dev
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - terraform-destroy:
-      #     context: Web
-      #     name: terraform-destroy-dev
-      #     requires:
-      #       - deploy-to-aws-cloudfront-dev
-      #     env: dev
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - terraform-validate:
-      #     context: Web
-      #     name: terraform-validate-prod
-      #     requires:
-      #       - deploy-to-aws-cloudfront-dev
-      #     env: prod
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - terraform-plan:
-      #     context: Web
-      #     name: terraform-plan-prod
-      #     requires:
-      #       - terraform-validate-prod
-      #     env: prod
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - hold:
-      #     type: approval
-      #     name: prod-approval
-      #     requires:
-      #       - terraform-plan-prod
-      # - terraform-plan-and-apply:
-      #     context: Web
-      #     name: terraform-plan-and-apply-prod
-      #     requires:
-      #       - prod-approval
-      #     env: prod
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - deploy-to-aws-s3-prod:
-      #     context: Web
-      #     requires:
-      #       - terraform-plan-and-apply-prod
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - deploy-to-aws-cloudfront-prod:
-      #     context: Web
-      #     requires:
-      #       - deploy-to-aws-s3-prod
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
-      # - terraform-destroy:
-      #     context: Web
-      #     name: terraform-destroy-prod
-      #     requires:
-      #       - deploy-to-aws-cloudfront-prod
-      #     env: prod
-      #     filters:
-      #       branches:
-      #         only:
-      #           - main
+  # when:
+  #   and:
+  #     - equal: [main, << pipeline.git.branch >>]
+  #     - matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
+  # build_and_deploy:
+  #   jobs:
+  #     - setup:
+  #         context: Web
+  #         filters:
+  #           tags:
+  #             only: /^v.*/
+  #           branches:
+  #             ignore: /.*/
+  #     - linting:
+  #         context: Web
+  #         requires:
+  #           - setup
+  # - bump-version:
+  #     context: Web
+  # requires:
+  #   - linting
+  # - build:
+  #     context: Web
+  #     requires:
+  #       - bump-version
+  # - terraform-validate:
+  #     context: Web
+  #     name: terraform-validate-dev
+  #     requires:
+  #       - build
+  #     env: dev
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - terraform-plan-and-apply:
+  #     context: Web
+  #     name: terraform-plan-and-apply-dev
+  #     requires:
+  #       - terraform-validate-dev
+  #     env: dev
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - deploy-to-aws-s3-dev:
+  #     context: Web
+  #     requires:
+  #       - terraform-plan-and-apply-dev
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - deploy-to-aws-cloudfront-dev:
+  #     context: Web
+  #     requires:
+  #       - deploy-to-aws-s3-dev
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - terraform-destroy:
+  #     context: Web
+  #     name: terraform-destroy-dev
+  #     requires:
+  #       - deploy-to-aws-cloudfront-dev
+  #     env: dev
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - terraform-validate:
+  #     context: Web
+  #     name: terraform-validate-prod
+  #     requires:
+  #       - deploy-to-aws-cloudfront-dev
+  #     env: prod
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - terraform-plan:
+  #     context: Web
+  #     name: terraform-plan-prod
+  #     requires:
+  #       - terraform-validate-prod
+  #     env: prod
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - hold:
+  #     type: approval
+  #     name: prod-approval
+  #     requires:
+  #       - terraform-plan-prod
+  # - terraform-plan-and-apply:
+  #     context: Web
+  #     name: terraform-plan-and-apply-prod
+  #     requires:
+  #       - prod-approval
+  #     env: prod
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - deploy-to-aws-s3-prod:
+  #     context: Web
+  #     requires:
+  #       - terraform-plan-and-apply-prod
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - deploy-to-aws-cloudfront-prod:
+  #     context: Web
+  #     requires:
+  #       - deploy-to-aws-s3-prod
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
+  # - terraform-destroy:
+  #     context: Web
+  #     name: terraform-destroy-prod
+  #     requires:
+  #       - deploy-to-aws-cloudfront-prod
+  #     env: prod
+  #     filters:
+  #       branches:
+  #         only:
+  #           - main
