--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -317,11 +317,12 @@ workflows:
   #       matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
   #   - equal: [main, << pipeline.git.branch >>]
 
-  # when:
-  #   and:
-  #     - equal: [main, << pipeline.git.branch >>]
-  #     - matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
   build_and_deploy:
+    when:
+      and:
+        - equal: [main, << pipeline.git.branch >>]
+        - not:
+            matches: { pattern: /^v.*/, value: << pipeline.git.tag >> }
     jobs:
       - bump-version:
           context: Web
