--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -346,8 +346,8 @@ workflows:
           filters:
             tags:
               only: /^v.*/
-            # branches:
-            #   ignore: /.*/
+            branches:
+              ignore: /.*/
       - linting:
           context: Web
           requires:
