--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ jobs:
       - run: |
           CURRENT_VERSION=$(jq -r '.version' package.json)
           echo "Current version: $CURRENT_VERSION"
+
   bump-version:
     executor: app-executor
     steps:
@@ -104,6 +105,8 @@ jobs:
             git config --global user.name "CircleCI"
             yarn config set version-git-message "[skip ci] Upgrade to version %s"
             git config --global push.followTags true
+            GIT_COMMIT_MESSAGE=git log --format=oneline -n 1 $CIRCLE_SHA1
+            echo $GIT_COMMIT_MESSAGE
             yarn version --patch
             git push https://${GITHUB_ACCESS_TOKEN}@github.com/jacobusa/react-terraform-aws.git main --follow-tags
             export CURRENT_VERSION=$(jq -r '.version' package.json)
