--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -318,7 +318,7 @@ workflows:
             tags:
               ignore: /.*/
 
-  build_and_test_pr:
+  build-and-test-pr:
     jobs:
       - setup:
           context: Web
@@ -334,7 +334,7 @@ workflows:
           requires:
             - linting
 
-  build_and_deploy:
+  build-and-deploy:
     jobs:
       - setup:
           context: Web
