--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ aliases:
       command: |
         yarn install
         CURRENT_VERSION=$(jq -r '.version' package.json)
-        echo \VITE_VERSION=$CURRENT_VERSION >> .env.dev 
+        echo \VITE_VERSION="$CURRENT_VERSION" >> .env.dev 
         yarn build:dev
         echo "Build Successful!"
   - &build-project-prod
